--- a/src/html/pages/contacts.html
+++ b/src/html/pages/contacts.html
@@ -65,9 +65,10 @@
             <b>▾</b>
           </div>
           <div class="dropdown__options">
-            <span>Телефон: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
-            <span>Факс: <a href="tel:+73472921470" class="link">+7 (347) 292-14-70</a></span>
-            <span>Email: <a href="mailto:office.ufa@fortdialog.ru" class="link">office.ufa@fortdialog.ru</a> </span>
+            <span>Россия, 450106,
+              Уфа, ул. Пушкина, д. 33/2,
+              блок А, 2 этаж, офис 201
+            </span>
           </div>
         </div>
       </div>
