--- a/src/html/pages/documents.html
+++ b/src/html/pages/documents.html
@@ -107,6 +107,7 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
+      </div>
     </section>
   </main>
   @@include('components/business/_footer.html')
