--- a/src/html/pages/events.html
+++ b/src/html/pages/events.html
@@ -25,7 +25,9 @@
       <div class="container">
         <div class="events-section__cards">
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -33,7 +35,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -43,7 +47,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -53,7 +59,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -61,7 +69,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -71,7 +81,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -81,7 +93,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -89,7 +103,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -99,7 +115,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -108,7 +126,6 @@
             </div>
             <div class="event-card__date">05.10.2023</div>
           </a>
-
         </div>
         @@include('components/ui/_pagination.html')
       </div>
