--- a/src/html/pages/news.html
+++ b/src/html/pages/news.html
@@ -25,7 +25,9 @@
       <div class="container">
         <div class="media-component media-component_secondary">
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -33,7 +35,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -41,7 +45,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">25 августа</div>
             <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -50,7 +56,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -58,7 +66,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -66,7 +76,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">25 августа</div>
             <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -75,7 +87,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">25 августа</div>
             <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -84,7 +98,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -92,7 +108,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
