--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -41,18 +41,17 @@
         </div>
         <div class="task__columns">
           <div class="numbers">
-
             <div class="numbers__item">
-              <div class="numbers__number">1500</div>
+              <div class="numbers__number"><span>1500</span></div>
               <div class="numbers__description">единиц школьной мебели</div>
             </div>
             <div class="numbers__item">
-              <div class="numbers__number">8</div>
+              <div class="numbers__number"><span>8</span></div>
               <div class="numbers__description numbers__description_narrow">мобильных компьютерных классов
               </div>
             </div>
             <div class="numbers__item">
-              <div class="numbers__number">30+</div>
+              <div class="numbers__number"><span>30</span> +</div>
               <div class="numbers__description numbers__description_narrow">интерактивных панелей и МФУ
               </div>
             </div>
@@ -92,7 +91,6 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-
     </section>
     <section class="projects-section projects-section_no-padding">
       <div class="container">
@@ -161,8 +159,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -170,15 +169,17 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
