--- a/src/html/pages/history.html
+++ b/src/html/pages/history.html
@@ -50,16 +50,16 @@
         </h2>
         <div class="numbers__wrapper">
           <div class="numbers__item">
-            <div class="numbers__number">1178+</div>
+            <div class="numbers__number"><span>1178</span> +</div>
             <div class="numbers__description numbers__description_narrow">проектов по модернизации ИТ-инфраструктуры
             </div>
           </div>
           <div class="numbers__item">
-            <div class="numbers__number">235 +</div>
+            <div class="numbers__number"><span>235</span> +</div>
             <div class="numbers__description">сертифицированных инженеров и разработчиков</div>
           </div>
           <div class="numbers__item numbers__item_large">
-            <div class="numbers__number numbers__number_large">35 лет</div>
+            <div class="numbers__number numbers__number_large"><span>35</span> лет</div>
             <div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и
               создаем
               решения, которыми
