--- a/src/html/pages/media.html
+++ b/src/html/pages/media.html
@@ -23,7 +23,9 @@
         <h2>Новости</h2>
         <div class="media-component media-component_secondary">
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -31,7 +33,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -39,7 +43,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">25 августа</div>
             <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -48,7 +54,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -56,7 +64,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">24 августа</div>
             <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -64,7 +74,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="news-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="news-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="news-card__date">25 августа</div>
             <h3>К 1 сентября компания «Форт Диалог» оснастила новую школу современным оборудованием</h3>
             <p>Центральный офис компании «Форт Диалог» в городе Уфе посетили ученики 10-х классов МБОУ СОШ 1 села
@@ -82,7 +94,9 @@
         <h2>Мероприятия</h2>
         <div class="events-section__cards">
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -90,7 +104,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -100,7 +116,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -110,7 +128,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -118,7 +138,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -128,7 +150,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -138,7 +162,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/skinheads.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/skinheads.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>в «Форт Диалоге» состоялся Sales Meeting-2023</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог»</p>
@@ -146,7 +172,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -156,7 +184,9 @@
             <div class="event-card__date">05.10.2023</div>
           </a>
           <a href="#" class="event-card">
-            <img src="@images/seaters.png" alt="photo">
+            <div class="event-card__image">
+              <img src="@images/seaters.png" alt="photo">
+            </div>
             <div class="event-card__wrapper">
               <h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
               <p>С 1 по 4 октября прошло большое обучение менеджеров по продажам группы компаний «Форт Диалог» С 1 по 4
@@ -165,7 +195,6 @@
             </div>
             <div class="event-card__date">05.10.2023</div>
           </a>
-
         </div>
         @@include('components/ui/_button-link.html',
         {href:'#', class: 'btn_secondary',children:'все мероприятия'})
@@ -176,7 +205,7 @@
         <h2>О нас в СМИ</h2>
         <div class="massmedia-section__cards">
           <div class="massmedia-card">
-            <img src="@images/rubezh.png">
+            <img src="@images/rubezh.png" alt="photo">
             <h3>RUБЕЖ и форт диалог</h3>
             <p>Журнал RUБЕЖ опросил крупнейших системных интеграторов о правилах игры в муниципальных проектах
               цифровизации и выяснил, какие платформы получили наиболее широкое распространение. Отвечает Тимур
@@ -184,14 +213,14 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/rashka.png">
+            <img src="@images/rashka.png" alt="photo">
             <h3>Мобильный кваториум</h3>
             <p>Компания Форт Диалог поставила в Республику Чувашия мобильный кванториум в рамках регионального проекта
               "Успех каждого ребенка" и нацпроекта "Образование"</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/sta.png">
+            <img src="@images/sta.png" alt="photo">
             <h3>Внедрение системы АСУ ТП</h3>
             <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
               катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
@@ -199,7 +228,7 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png">
+            <img src="@images/alexey.png" alt="photo">
             <h3>Совхоз Алексеевский</h3>
             <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
               теплицах совхоза "Алексеевский"</p>
@@ -207,7 +236,7 @@
           </div>
 
           <div class="massmedia-card">
-            <img src="@images/sta.png">
+            <img src="@images/sta.png" alt="photo">
             <h3>Внедрение системы АСУ ТП</h3>
             <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
               катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
@@ -215,7 +244,7 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="massmedia-card">
-            <img src="@images/alexey.png">
+            <img src="@images/alexey.png" alt="photo">
             <h3>Совхоз Алексеевский</h3>
             <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
               теплицах совхоза "Алексеевский"</p>
