--- a/src/html/pages/service-detail.html
+++ b/src/html/pages/service-detail.html
@@ -223,8 +223,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -232,15 +233,17 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
