--- a/src/html/pages/solution-detail.html
+++ b/src/html/pages/solution-detail.html
@@ -23,7 +23,7 @@
           <span class="children">
             Оставить заявку
           </span>
-          </ф>
+        </a>
       </div>
     </section>
 
@@ -203,8 +203,9 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -212,15 +213,17 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <div class="solution-card__image"></div>
-            <img src="@images/solution-bg.png" alt="photo">
+            <div class="solution-card__image">
+              <img src="@images/solution-bg.png" alt="photo">
+            </div>
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
