--- a/src/html/pages/documents.html
+++ b/src/html/pages/documents.html
@@ -47,32 +47,32 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
-        <h2>Сертификаты</h2>
-        <div class="documents__certificates swiper-component swiper-component_secondary swiper">
+        <h2>Отзывы заказчиков</h2>
+        <div class="documents__reviews swiper-component swiper-component_secondary swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/certificate1.png" alt="photo">
+              <img src="@images/review1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate2.png" alt="photo">
+              <img src="@images/review2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate3.png" alt="photo">
+              <img src="@images/review2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate4.png" alt="photo">
+              <img src="@images/review1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate1.png" alt="photo">
+              <img src="@images/review2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate2.png" alt="photo">
+              <img src="@images/review2.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate3.png" alt="photo">
+              <img src="@images/review1.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/certificate4.png" alt="photo">
+              <img src="@images/review2.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
