--- a/src/html/pages/partners.html
+++ b/src/html/pages/partners.html
@@ -19,11 +19,13 @@
           </li>
         </ul>
         <h1>Партнеры</h1>
-        <form class="search-bar">
-          <input placeholder="Поиск по названию партнера" required>
-          <button class="search-bar__reset" type="reset"></button>
-          <button class="search-bar__submit" type="submit"></button>
-        </form>
+        <div class="search-bar">
+          <form>
+            <input placeholder="Поиск по названию партнера" required>
+            <button class="search-bar__reset" type="reset"></button>
+            <button class="search-bar__submit" type="submit"></button>
+          </form>
+        </div>
       </div>
     </section>
     <section class="partners">
