--- a/src/html/pages/media-detail.html
+++ b/src/html/pages/media-detail.html
@@ -139,18 +139,20 @@
         <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
           на сайте</p>
       </div>
-      <form class="questions__form form form_secondary">
-        @@include('components/ui/_input-email.html', {placeholder: 'Электронная почта*', name: 'email', required:
-        true})
-        <div class="form__row">
-          <div class="form__privacy">
-            Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
+      <div class="questions__form form form_secondary">
+        <form>
+          @@include('components/ui/_input-email.html', {placeholder: 'Электронная почта*', name: 'email', required:
+          true})
+          <div class="form__row">
+            <div class="form__privacy">
+              Отправляя форму, вы даете свое согласие
+              на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
+            </div>
+            @@include('components/ui/_button.html',
+            {type: 'submit', class: 'btn_green',children:'отправить'})
           </div>
-          @@include('components/ui/_button.html',
-          {type: 'submit', class: 'btn_green',children:'отправить'})
-        </div>
-      </form>
+        </form>
+      </div>
     </section>
   </main>
   @@include('components/business/_footer.html')
