--- a/src/html/pages/partner-detail.html
+++ b/src/html/pages/partner-detail.html
@@ -47,24 +47,26 @@
         <p>Вы можете направить свой вопрос на почту <a href="mail:pochta@mail.ru" class="link link_green">pochta@mail.ru</a> или воспользоваться формой
           на сайте</p>
       </div>
-      <form class="questions__form form">
-        <div class="form__row">
-          @@include('components/ui/_input-text.html', {placeholder: 'Ваше имя*', errorMessage: 'Введите ваше имя', name:
-          'name', required: true})
-          @@include('components/ui/_input-email.html', {placeholder: 'Электронная почта*', name: 'email', required:
-          true})
-        </div>
-        @@include('components/ui/_textarea.html', {placeholder: 'Оставьте свое сообщение*',
-        errorMessage: 'Оставьте свое сообщение', name: 'message', required: true})
-        <div class="form__row">
-          <div class="form__privacy">
-            Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
+      <div class="questions__form form">
+        <form>
+          <div class="form__row">
+            @@include('components/ui/_input-text.html', {placeholder: 'Ваше имя*', errorMessage: 'Введите ваше имя', name:
+            'name', required: true})
+            @@include('components/ui/_input-email.html', {placeholder: 'Электронная почта*', name: 'email', required:
+            true})
           </div>
-          @@include('components/ui/_button.html',
-          {type: 'submit', class: 'btn_green',children:'отправить'})
-        </div>
-      </form>
+          @@include('components/ui/_textarea.html', {placeholder: 'Оставьте свое сообщение*',
+          errorMessage: 'Оставьте свое сообщение', name: 'message', required: true})
+          <div class="form__row">
+            <div class="form__privacy">
+              Отправляя форму, вы даете свое согласие
+              на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
+            </div>
+            @@include('components/ui/_button.html',
+            {type: 'submit', class: 'btn_green',children:'отправить'})
+          </div>
+        </form>
+      </div>
     </section>
   </main>
   @@include('components/business/_footer.html')
