--- a/src/html/pages/solution-detail.html
+++ b/src/html/pages/solution-detail.html
@@ -40,15 +40,22 @@
                 <h3>Основные функции системы:</h3>
                 <div class="accordion-icon"></div>
               </div>
-              <ul class="list accordion__content">
-                <li>Вывод сводной информации о техническом состоянии комплексов ФВФ;</li>
-                <li>Отображение на интерактивной карте расположение каждого комплекса и вывод его состояния на карте;
-                </li>
-                <li>Сбор и вывод технических параметров комплексов ФВФ;</li>
-                <li>Расчет интенсивности трафика на основе собранных данным о зафиксированных транспортных средствах и
-                  количестве зафиксированных нарушений ПДД;</li>
-                <li>Поиск на комплексах ФВФ фотоматериалов по заданному номерному знаку.</li>
-              </ul>
+              <div class="accordion__content">
+                <p>Расчет интенсивности трафика на основе собранных данным о зафиксированных транспортных средствах и
+                  количестве зафиксированных нарушений ПДД;Расчет интенсивности трафика на основе собранных данным о зафиксированных транспортных средствах и
+                  количестве зафиксированных нарушений ПДД;</p>
+                <a href="#">Ссылка</a>
+                <ul class="list">
+                  <li>Вывод сводной информации о техническом состоянии комплексов ФВФ;</li>
+                  <li>Отображение на интерактивной карте расположение каждого комплекса и вывод его состояния на карте;
+                  </li>
+                  <li>Сбор и вывод технических параметров комплексов ФВФ;</li>
+                  <li>Расчет интенсивности трафика на основе собранных данным о зафиксированных транспортных средствах и
+                    количестве зафиксированных нарушений ПДД;</li>
+                  <li>Поиск на комплексах ФВФ фотоматериалов по заданному номерному знаку.</li>
+                </ul>
+              </div>
+
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
